= 2.1.0.12 =
* GD > Categories option added to choose image size - ADDED
* Frontend delete listing don't prompt any response message with AUI - FIXED
* Option added GD > Loop Actions to hide layouts for frontend list view - ADDED
* Elementor Them Builder layout preview image missing for GD Elementor templates - FIXED

= 2.1.0.11 =
* Conflict of select2 basic version loaded - FIXED
* Brizy page builder compatibility - ADDED
* Featured field always shows checked - FIXED
* GD > Recent Reviews option added to filter reviews by post id - ADDED
* GD > Categories icon color not working with icon top design - FIXED
* Map marker hover bounce not working on lazy load map - FIXED
* Cat filter on map breaks the design - FIXED
* GD > Best of listings widget don't show empty categories - CHANGED
* UpSolution Core plugin compatibility - ADDED
* Hook added to extend "Admin Only" edit visibility to other user roles - ADDED
* Field to filter posts by Service Distance added - ADDED
* Allow geodirectory template override from theme directory - ADDED
* Some database with pxc_strict_mode prevents insert review without primary key - FIXED
* Tabs list with kadence theme might not scroll on first click - FIXED
* Tabs list as pills does not switch active class - FIXED
* Custom field price options are working properly - FIXED

= 2.1.0.10 =
* Show x stars back instead of rating type name on hover of ratings - CHANGED
* Field description is missing for radio/checkbox multiselect fields - FIXED
* Tool added to regenerate thumbnails for the post images - ADDED
* Map can no longer be moved if no records found message shown - FIXED
* Elementor loop shows wrong post class for first element - FIXED
* Featured field shows checked for empty value when default set to checked - FIXED
* GD Listings elementor skin element missing background image - FIXED
* Add post ID in gd_post_meta,gd_post_badges and gd_dynamic_content - ADDED

= 2.1.0.9 =