@@ -484,7 +484,8 @@ class GeoDir_Widget_Post_Images extends WP_Super_Duper {
 				$link_tag_close = "<i class=\"fas fa-link\" aria-hidden=\"true\"></i></a>";
 			}elseif($options['link_to']=='lightbox'){
 				$link = '';
-				$link_tag_open = "<a href='%s' class='geodir-lightbox-image $responsive_image_class d-block' data-lity>";
+				$lightbox_attrs = apply_filters( 'geodir_link_to_lightbox_attrs', '' );
+				$link_tag_open = "<a href='%s' class='geodir-lightbox-image $responsive_image_class d-block' data-lity {$lightbox_attrs}>";
 				$link_tag_close = "<i class=\"fas fa-search-plus\" aria-hidden=\"true\"></i></a>";
 			}elseif($responsive_image_class){
 				$link_tag_open = '<span class="'.$responsive_image_class.'">';
